# stratus-core

./: .gitignore  README.md  cli.py  env_config.py  main.py  pyproject.toml  requirements.txt  utils.py
app/: config.py  database.py
app/modules/chat/: __init__.py  controller.py  workflow.py
app/modules/indices/: __init__.py  background.py  controller.py  directory_loader.py  ingestion_pipeline.py  listener.py
app/modules/projects/: __init__.py  controller.py  models.py  schemas.py  service.py
app/modules/projects/status/: __init__.py  models.py  schemas.py  service.py
app/modules/questions/: __init__.py  controller.py  models.py  question_generator.py  schemas.py  service.py
app/shared/: chroma_db.py  embed_models.py  llms.py  settings.py
app/utils/: __init__.py  emitter.py  git.py
engines/: chroma_db.py  settings.py
engines/agents/: react_agent.py
engines/loaders/: directory.py
engines/pipelines/: ingestion.py
engines/pipelines/custom/: custom_code_splitter.py
engines/pipelines/custom/pydantic_output_parser/: json_repair.py
engines/utils/: build_nested_structure.py  build_tool_metadata.py  exclude_documents.py  exclude_gitignore.py  prune_empty_directories.py
engines/workflow/: workflow.py
models/: __init__.py  project_status.py  projects.py
services/: directory.py  index.py  query.py
